force-app/main/default/objects/Invoice_Line__c/fields/Blanket_Order_Delete__c.field-meta.xml
<CustomField>
    <fullName>Blanket_Order_Delete__c</fullName>
    <label>Blanket Order Delete</label>
    <type>Date</type>
</CustomField>