force-app/main/default/objects/Invoice_Line__c/fields/Contract_Action__c.field-meta.xml
<CustomField>
    <fullName>Contract_Action__c</fullName>
    <formula>TEXT(Order_Product__r.SBQQ__ContractAction__c)</formula>
    <label>Contract Action</label>
    <type>Text</type>
</CustomField>