force-app/main/default/objects/Invoice_Line__c/fields/Department_Code__c.field-meta.xml
<CustomField>
    <fullName>Department_Code__c</fullName>
    <formula>TEXT(Product__r.Department_Code__c )</formula>
    <label>Department Code</label>
    <type>Text</type>
</CustomField>