force-app/main/default/objects/Invoice_Line__c/fields/Item_Serie_Number__c.field-meta.xml
<CustomField>
    <fullName>Item_Serie_Number__c</fullName>
    <label>Item Serie Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>