force-app/main/default/objects/Invoice_Line__c/fields/NAV_List_ACV__c.field-meta.xml
<CustomField>
    <fullName>NAV_List_ACV__c</fullName>
    <description>Used for NAV integration - Grabs information from the related Quote Line field List ACV
Sends to NAV Blanket Order Line field Unit Price Excl. VAT</description>
    <formula>Quote_Line__r.List_Price_per_Year_WF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Fetches the value on the related Quote Line field List Yearly Order Value</inlineHelpText>
    <label>List Price per Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>