force-app/main/default/objects/Invoice_Line__c/fields/NAV_Partner_ACV__c.field-meta.xml
<CustomField>
    <fullName>NAV_Partner_ACV__c</fullName>
    <description>NAV Integration - Gathers info from Quote Line: Partner ACV
Sent to NAV Blanket Order: Line Amount excl VAT</description>
    <formula>IF(Prorate_multiplier__c &gt;=1, ( Quote_Line__r.Partner_Price_per_Year_WF__c ) ,
Quote_Line__r.Partner_Price_per_Year_WF__c * NAV_Prorate_Multiplier_for_Formula__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Matches the field &quot;Partner ACV&quot; on the related Quote Line.</inlineHelpText>
    <label>Partner ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>