force-app/main/default/objects/Invoice_Line__c/fields/NAV_Prorate_Multiplier_for_Formula__c.field-meta.xml
<CustomField>
    <fullName>NAV_Prorate_Multiplier_for_Formula__c</fullName>
    <description>Used in NAV integration.
Populated by Process Builder seeing as the field &quot;Prorate Multiplier&quot; could not be used in othe Formulas due to length of formula.</description>
    <label>Prorate Multiplier for Formula</label>
    <precision>18</precision>
    <scale>16</scale>
    <type>Number</type>
</CustomField>