force-app/main/default/objects/Invoice_Line__c/fields/NAV_Prorate_Multiplier_IL_WF__c.field-meta.xml
<CustomField>
    <fullName>NAV_Prorate_Multiplier_IL_WF__c</fullName>
    <label>Prorate Multiplier WF</label>
    <precision>11</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>