force-app/main/default/objects/Invoice_Line__c/fields/NAV_Sum_of_Partner_ACV__c.field-meta.xml
<CustomField>
    <fullName>NAV_Sum_of_Partner_ACV__c</fullName>
    <description>NAV integration - Temporary fix to integration fail due to min price causing Partner price &gt; List Price</description>
    <label>Sum of Partner ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>