force-app/main/default/objects/Invoice_Line__c/fields/NAV_Type__c.field-meta.xml
<CustomField>
    <fullName>NAV_Type__c</fullName>
    <formula>TEXT(Product__r.NAV_Type__c)</formula>
    <label>NAV Type</label>
    <type>Text</type>
</CustomField>