force-app/main/default/objects/Invoice_Line__c/fields/Navision_Prod_No__c.field-meta.xml
<CustomField>
    <fullName>Navision_Prod_No__c</fullName>
    <formula>Product__r.NAV_Prod_No__c</formula>
    <label>Navision Prod No</label>
    <type>Text</type>
</CustomField>