force-app/main/default/objects/Invoice_Line__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <formula>TEXT(Order__r.Type)</formula>
    <label>Order Type</label>
    <type>Text</type>
</CustomField>