force-app/main/default/objects/Invoice_Line__c/fields/Prorate_Multiplier_RoundDown__c.field-meta.xml
<CustomField>
    <fullName>Prorate_Multiplier_RoundDown__c</fullName>
    <description>Used for NAV integration to reflect the Quantity value on the Blanket Order.</description>
    <label>Prorate Multiplier RoundUp</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>