force-app/main/default/objects/Invoice_Line__c/fields/QL_Partner_ACV__c.field-meta.xml
<CustomField>
    <fullName>QL_Partner_ACV__c</fullName>
    <formula>Quote_Line__r.Partner_ACV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QL Partner ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>