force-app/main/default/objects/Invoice_Line__c/fields/QL_Prorate_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>QL_Prorate_Multiplier__c</fullName>
    <formula>Quote_Line__r.SBQQ__ProrateMultiplier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QL Prorate Multiplier</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>