force-app/main/default/objects/Invoice_Line__c/fields/Sales_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Type_Code__c</fullName>
    <label>Sales Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Type_Code</valueSetName>
    </valueSet>
</CustomField>