force-app/main/default/objects/Invoice_Line__c/fields/Yearly_Product_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Product_Order_Value__c</fullName>
    <label>Yearly Product Order Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>