force-app/main/default/objects/Invoice_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Prorate_multiplier__c</columns>
    <columns>NAV_Prorate_Multiplier_for_Formula__c</columns>
    <columns>Prorate_Multiplier_RoundDown__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>